crates/solidity/testing/snapshots/bindings_output/contracts/inheritance_arguments_with_inner_constant/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[ input.sol:2:16 ]
   │
 2 │     constructor(uint) {}
   │                ─────┬────  
   │                     ╰────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ contract Base {
   │          ──┬─  
   │            ╰─── name: 1
   │ 
 5 │ contract Derived is Base(OTHER) { // the initializer expression should NOT bind
   │          ───┬───  
   │             ╰───── name: 2
 6 │     uint constant OTHER = 33;
   │                   ──┬──  
   │                     ╰──── name: 3
   │
   ├─[ input.sol:1:1 ]
   │
 2 │     constructor(uint) {}
   │     ─────┬─────  
   │          ╰─────── unresolved
   │ 
 5 │ contract Derived is Base(OTHER) { // the initializer expression should NOT bind
   │                     ──┬─ ──┬──  
   │                       ╰───────── ref: 1
   │                            │    
   │                            ╰──── unresolved
───╯
[39mDefiniens:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │   ╭─▶ contract Base {
   ┆   ┆   
 3 │ │ ├─▶ }
   │ │ │       
   │ │ ╰─────── definiens: 1
 4 │ ╭───▶ 
   ┆ ┆     
 7 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 2
   │
   ├─[ input.sol:1:1 ]
   │
 6 │     uint constant OTHER = 33;
   │ ───────────────┬──────────────  
   │                ╰──────────────── definiens: 3
───╯
